# Neural-Networks

./: README.md  main.py  pyproject.toml
neural_networks/: perceptron.py
neural_networks/core/: activations.py  costs.py  logistic_perceptron.py  perceptron.py  shallow_neural_network.py
neural_networks/use_cases/: logical_and.py  logistic_perceptron.py  shallow_neural_network.py
