[tool.poetry]
name = "neural-networks"
version = "0.1.0"
description = "This repository has some implementations of neural networks developed to practice basic concepts."
authors = ["Luis Papiernik <lpapiernik24@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
